# worth_it

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  BACKEND.md  CLAUDE.md  MIGRATION_STATUS.md  README.md  SUMMARY.md  TESTING.md  api.py  api_client.py  app.py  app_original.py  calculations.py  codebase_analysis.md  comparison_v3.py  config.py  models.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  run_dev.sh  start.bat  start.sh  test_api.py  test_calculations.py  test_integration.py
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: claude-code-review.yml  playwright-pr  playwright-pr.yaml  playwright.yml  test.yml
backend/: .env.example  CLAUDE.md  README.md  calculations.py  main.py  models.py  pyproject.toml  test_calculations.py
backend/api/: routes.py
backend/tests/: conftest.py  test_api.py  test_api_growth.py  test_benchmarks.py  test_calculations.py  test_comparables.py  test_comparison.py  test_conversion_engine.py  test_dilution.py  test_dilution_engine.py  test_growth_engine.py  test_integration.py  test_investment_strategies.py  test_monte_carlo_performance.py  test_monte_carlo_simulation.py  test_monte_carlo_valuation.py  test_npv_comparison.py  test_real_options.py  test_reports.py  test_typed_models.py  test_valuation.py  test_wacc.py  test_waterfall_engine.py  test_weighted_average.py
docs/: AGENT.md  BACKEND.md  CHANGELOG.md  IMPROVEMENTS.md  README.md  RESTRUCTURING.md  SUMMARY.md  TESTING.md
docs/plans/: 2025-12-05-cap-table-design.md  2025-12-10-dilution-preview-design.md  2025-12-10-safe-note-conversion-design.md  2025-12-11-waterfall-analysis-design.md  2025-12-13-form-validation-feedback-design.md  2025-12-14-load-example-button-design.md  2025-12-17-backend-business-logic-migration.md  2025-12-19-cap-table-version-history-design.md  2025-12-19-cap-table-wizard-design.md  2025-12-19-equity-timeline-design.md  2025-12-20-error-schema-design.md  2025-12-20-layout-shift-fix-design.md  2025-12-21-api-router-refactor-design.md  2025-12-21-dilution-engine-design.md  2025-12-21-dilution-engine-implementation.md  2025-12-21-typed-request-payloads-design.md  2025-12-21-typed-request-payloads-implementation.md  2025-12-27-ultimate-valuation-calculator-design.md  2025-12-27-valuation-calculator-phase1.md  2025-12-27-valuation-calculator-phase2.md  2025-12-27-valuation-calculator-phase3.md  2025-12-27-valuation-calculator-phase4.md  2025-12-27-valuation-calculator-phase5.md  2025-12-27-valuation-calculator-phase6.md
frontend/: .gitignore  .prettierignore  App.tsx  CLAUDE.md  README.md  eslint.config.mjs  index.html  jest.config.js  next.config.ts  package-lock.json  package.json  playwright.config.prod.ts  playwright.config.ts  run-ui-tests.sh  vite.config.ts  vitest.config.ts
frontend/__tests__/: form-integration.test.tsx  infinite-loop-prevention.test.tsx  setup.ts  setup.tsx  use-deep-compare.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ErrorBoundary.tsx  InputSection.tsx  LanguageContext.tsx  PresetTemplates.tsx  RiskAnalysis.tsx  command-palette.tsx  draft-recovery-dialog.tsx  mode-toggle.tsx
frontend/lib/: api-client.ts  comparison-utils.ts  decision-framework.ts  dilution-utils.ts  employee-scenario-utils.ts  export-utils.ts  format-utils.ts  motion.tsx  providers.tsx  scenario-utils.ts  schemas.ts  sensitivity-utils.ts  store.ts  use-deep-compare.ts  utils.ts  validation.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  main.tsx
frontend/styles/: globals.css
frontend/tests/: accessibility.spec.ts  basic-ui.spec.ts  calculator-form.spec.ts  monte-carlo-websocket.spec.ts  (+3 more)
playwright/: README.md
scripts/: example_backend_usage.py  generate-types.sh  run-e2e-tests.sh  start.bat  start.sh
tests/: __init__.py  test_api.py  test_calculations.py  test_integration.py
(+385 files in other folders)
