[project]
name = "worth-it"
version = "2.0.0"
description = "Financial comparison tool for evaluating startup job offers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "numpy-financial>=1.0.0",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "scipy>=1.15.3",
    "statsmodels>=0.14.5",
]

