[project]
name = "worth-it-temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.29.1",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "numpy-financial>=1.0.0",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "statsmodels>=0.14.5",
    "streamlit>=1.47.1",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
]

