[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worth-it"
version = "1.0.0"
description = "Startup job offer financial analyzer with Monte Carlo simulations"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Worth It Team"}
]
keywords = ["finance", "startup", "monte-carlo", "equity", "analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.27.0",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "numpy-financial>=1.0.0",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "statsmodels>=0.14.5",
    "streamlit>=1.47.1",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worth_it"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used check (needed for tests)
